# DesignPatterns

./: CMakeCache.txt  Design2.md  DesignPatterns.sln  README.md  design.md
DesignPatterns/: And.cpp  And.h  Circuit.cpp  Circuit.h  Component.cpp  Component.h  Composite.cpp  Composite.h  DesignPatterns.cpp  DesignPatterns.vcxproj  DesignPatterns.vcxproj.filters  FactoryMethod.hpp  FileRead.cpp  FileRead.h  GraphGenerator.cpp  GraphGenerator.h  Input.cpp  Input.h  Iterator.cpp  Iterator.h  Nand.cpp  Nand.h  Nor.cpp  Nor.h  Not.cpp  Not.h  Or.cpp  Or.h  Probe.cpp  Probe.h  Xor.cpp  Xor.h  circuitResult.txt  example.txt
DesignPatterns/include/: and.h  composite.h  iterator.h  not.h
DesignPatterns/src/: component.cpp  composite.cpp  main.cpp  xor.cpp
DesignPatterns/x64/Debug/: DesignPatterns.exe.recipe  DesignPatterns.ilk  and.obj.enc  circuit.obj.enc  designpatterns.obj.enc  vc143.idb
DesignPatterns/x64/Debug/DesignPatterns.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  DesignPatterns.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
circuits/: CIRCUIT3.TXT  circuit1.txt  circuitTest.txt
design/: CMakeLists.txt
design/include/: FileProcess.h  FileRead.h  and.h  component.h  input.h  or.h  probe.h  xor.h
design/src/: FileProcess.cpp  FileRead copy.cpp  and.cpp  component.cpp  input.cpp  main.cpp  not.cpp  or.cpp  probe.cpp  xor.cpp
headers/: not.h  or.h  xor.h
src/: and.cpp
